# -sovereign-archon-dsp-suite

./: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
.github/workflows/: build-unified-bundle.yml
installer/: master_bundle_setup.iss
modules/shared_dsp/: SovereignArchonCore.cpp  SovereignArchonCore.h
modules/shared_ui/: SovereignArchonUI.cpp  SovereignArchonUI.h
